# time-series-forecasting

./: .gitignore  LICENSE  Makefile  README.md  model_card.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md  co2_sample.csv
notebooks/: demo.ipynb
results/: forecast.csv  metrics.json
scripts/: download_data.py  forecast.py  make_sample.py
src/tsforecast/: __init__.py  backtest.py  data.py  decompose.py  forecast.py  metrics.py
tests/: test_backtest.py  test_forecast.py  test_metrics.py
