[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsforecast"
version = "0.1.0"
description = "Classical time-series forecasting: decomposition, ARIMA/SARIMAX, walk-forward backtesting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4", "black>=24.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
